--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
       <div class="inner">
         <h1>TianbinTobin.GitHub.io</h1>
         <h2></h2>
-        <a href="https://github.com/TianbinTobin" class="button"><small>Follow me on</small> GitHub</a>
+        <a href="demo.html" class="button"><small>Follow me on</small> MyDemo</a>
       </div>
     </header>
 
@@ -62,6 +62,6 @@
       </div>
     </div>
 
-  
+
   </body>
 </html>
