--- a/demo.html
+++ b/demo.html
@@ -3,7 +3,7 @@
 
 <head>
   <title>SLIDESHOW CSS3 | HTML5</title>
-  <meta http-equiv="Content-Type" content="text/html; charset=iso-8859-1" />
+  <meta charset='utf-8'>
 
   <style type="text/css">
     html,
@@ -212,7 +212,7 @@
 
 <body>
   <div id="header">
-    <h3>APPLE<sup>®</sup> iPAD 2 SLIDE SHOW WITH DARK BOX EFFECT IMPLEMENTED AS PURE CSS 3 SOLUTION (NO JAVASCRIPT)</h3>
+    <h3>APPLE iPAD 2 SLIDE SHOW WITH DARK BOX EFFECT IMPLEMENTED AS PURE CSS 3 SOLUTION</h3>
   </div>
   <!-- NAV THUMBNAILS -->
   <div id="divThumbnails">
@@ -292,7 +292,7 @@
       <a href="#divDarkBox2">
         <img src="image/001.jpg" alt="APPLE® STORE IN MANHATTAN NY" />
       </a>
-      <h1>APPLE<sup>®</sup> STORE IN MANHATTAN, NY. iPAD 2 WEEKEND STARTED ON MARCH 12th, 2011</h1>
+      <h1>APPLE STORE IN MANHATTAN, NY. iPAD 2 WEEKEND STARTED ON MARCH 12th, 2011</h1>
     </div>
   </div>
   <!--2nd SLIDE -->
@@ -373,7 +373,7 @@
       <a href="#divDarkBox6">
         <img src="image/005.jpg" alt="FRACTION CALCULATOR" />
       </a>
-      <h1>MOBILE ONLINE FRACTION CALCULATOR (ALSO MY STUFF :)</h1>
+      <h1>MOBILE ONLINE FRACTION CALCULATOR</h1>
     </div>
   </div>
   <!--6th SLIDE -->
@@ -430,7 +430,7 @@
       <a href="#divDarkBox9">
         <img src="image/002.jpg" alt="BING MAP" />
       </a>
-      <h1>MICROSOFT INTERACTIVE BING<sup>®</sup> MAP AND 7-DAY WEATHER FORECAST WORK FINE</h1>
+      <h1>MICROSOFT INTERACTIVE BING MAP AND 7-DAY WEATHER FORECAST WORK FINE</h1>
     </div>
   </div>
   <!--9th SLIDE: LAST ONE -->
