--- a/demo.html
+++ b/demo.html
@@ -410,7 +410,7 @@
       <a href="#divDarkBox8">
         <img src="image/001.jpg" alt="SILVERLIGHT" />
       </a>
-      <h1>MICROSOFT SILVERLIGHT<sup>®</sup> APPLICATION IS NOT WORKING...</h1>
+      <h1>MICROSOFT SILVERLIGHT APPLICATION IS NOT WORKING...</h1>
     </div>
   </div>
   <!--8th SLIDE: -->
